--- a/HOLA.html
+++ b/HOLA.html
@@ -59,6 +59,13 @@
             height: 150px;
             margin: 20px 0;
             border-radius: 15px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 20px;
+            font-weight: bold;
+            text-align: center;
+            padding: 10px;
         }
     </style>
 </head>
@@ -78,8 +85,8 @@
         </div>
         <div class="main-content">
             <h2>INICIO</h2>
-            <div class="content-box"></div>
-            <div class="content-box"></div>
+            <div class="content-box">¿</div>
+            <div class="content-box">.</div>
         </div>
     </div>
 </body>
